--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -47,6 +47,7 @@
 
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="">Mi perfil</a></li>
+                        <li><a href="/Home/Login">Login</a></li>
                         @Html.ActionLink("Registrarme", "Registro", "Home")
                         <li class="divider"></li>
                         <li><a href="">Salir</a></li>
