Separo Header Footer en P.Views - Index hecho para user logueado

--- a/WebCovid19/Views/Shared/_Layout.cshtml
+++ b/WebCovid19/Views/Shared/_Layout.cshtml
@@ -26,31 +26,24 @@
         @Html.Partial("VPHeader")
         <!-- Termina la definición del menú -->
         <!--
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-        @*            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-         *@       </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                    </ul>
-                </div>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+    @*            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+     *@       </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                </ul>
             </div>
         </div>
+    </div>
 
-        -->
-
-
-
-
-
-
-
+    -->
 
 
         <div class="container body-content">
@@ -60,11 +53,10 @@
 
         </div>
 
-
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
+            @Html.Partial("VPFooter")
+        
+    
 
 
     <!--
