--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -1,19 +1,18 @@
-﻿<nav class="navbar navbar-expand-md  fixed-top position-fixed" style="background-color: #2f1793;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#miNavbar"
-            aria-controls="miNavbar" aria-expanded="false" aria-label="Mostrar u ocultar menú">
-        <i class="fa fa-align-justify" aria-hidden="true"></i>
-    </button>
-    <span class="navbar-toggler-icon"></span>
+﻿<div class="container">
+    <!-- Definición del menú -->
+    <nav class="navbar navbar-expand-md  fixed-top position-fixed" id="colour">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#miNavbar"
+                aria-controls="miNavbar" aria-expanded="false" aria-label="Mostrar u ocultar menú">
+            <i class="fa fa-align-justify" aria-hidden="true"></i>
+        </button>
+        <span class="navbar-toggler-icon"></span>
 
 
-    <div class="col-md-12">
         <div class="collapse navbar-collapse" id="miNavbar">
+            <img class="border border-white" id="image-perfil" src="~/Content/Img/2.jpg">
 
-            <div class="col-md-2">
-                <h3 class="text-light">Logo</h3>
-            </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 ml-4">
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input my-lg-2" id="exampleCheck1">
                     <label class="form-check-label text-light " for="exampleCheck1">Necesidades activas</label>
@@ -23,39 +22,65 @@
 
             <div class="col-md-4">
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-1" type="text" placeholder="Búsqueda" aria-label="Búsqueda">
+                    <input class="form-control mr-sm-1" type="text" id="search" placeholder="Búsqueda" aria-label="Búsqueda">
                     <button class="btn btn-outline-primary btn-rounded my-2 my-sm-0 text-light" type="submit">Buscar</button>
                 </form>
             </div>
 
+            <div class="col-md-4 ml-5">
+                <ul class="navbar-nav ">
+                    <li class="nav-item active my-sm-2">
+                        <!-- <a class="nav-link hover text-light" href="#">Inicio</a-->
+                        @Html.ActionLink("Inicio", "Index", "Home", new { @class= "nav-link hover text-light" })
+                    </li>
+                    <li class="nav-item active my-sm-2">
+                        <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
+                        @Html.ActionLink("Crear Necesidad", "NecesidadAlta", "Necesidad" , new { @class = "nav-link hover text-light" })
+                    </li>
+                    <li class="nav-item active my-sm-2">
+                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
+                        @Html.ActionLink("Acerca de", "Index", "Home", new { @class = "nav-link hover text-light" })
+                    </li>
 
-            <ul class="navbar-nav ">
-                <li class="nav-item active my-sm-2">
-                    <a class="nav-link hover text-light" href="#">Inicio</a>
-                </li>
-                <li class="nav-item active my-sm-2">
-                    <a class="nav-link hover text-light" href="#">Necesidades</a>
-                </li>
-                <li class="nav-item active my-sm-2">
-                    <a class="nav-link hover text-light" href="#">Contacto</a>
-                </li>
 
-                <div class="btn-group">
-                    <button class="btn btn-outline-primary btn-rounded my-4 my-sm-2 dropdown-toggle" type="submit" data-toggle="dropdown">
-                        <i class="fa fa-user-circle" aria-hidden="true"></i>
-                    </button>
+                    <div class="btn-group">
+                        <button class="btn btn-outline-primary btn-rounded my-4 my-sm-2 dropdown-toggle"
+                                type="submit" data-toggle="dropdown">
+                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        </button>
 
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="">Mi perfil</a></li>
-                        <li><a href="/Home/Login">Login</a></li>
-                        @Html.ActionLink("Registrarme", "Registro", "Home")
-                        <li class="divider"></li>
-                        <li><a href="">Salir</a></li>
-                    </ul>
-                </div>
+                        <ul class="dropdown-menu" role="menu" id="colour">
+                            <li>
+                                <a href="" class="text-light">
+                                    <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
+                                    </svg>
+                                    Mi perfil
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" class="text-light">
+                                    <svg class="bi bi-exclamation-octagon-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M11.46.146A.5.5 0 0011.107 0H4.893a.5.5 0 00-.353.146L.146 4.54A.5.5 0 000 4.893v6.214a.5.5 0 00.146.353l4.394 4.394a.5.5 0 00.353.146h6.214a.5.5 0 00.353-.146l4.394-4.394a.5.5 0 00.146-.353V4.893a.5.5 0 00-.146-.353L11.46.146zM8 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
+                                    </svg>
+                                    Denuncias (Admin)
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="" class="text-light">
+                                    <i class="fa fa-sign-out" aria-hidden="true"></i>
+                                    Salir
+                                </a>
+                            </li>
 
-            </ul>
+                        </ul>
+                    </div>
 
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+
+    </nav>
+    <!-- Termina la definición del menú -->
+</div>
