--- a/WebCovid19/Views/Shared/VPFooter.cshtml
+++ b/WebCovid19/Views/Shared/VPFooter.cshtml
@@ -2,7 +2,7 @@
 <footer class="footer-bs mt-5">
     <div class="row">
         <div class="col-md-3 footer-brand animated fadeInLeft">
-            <h2>Logo</h2>
+            <img class="border border-white" id="image-perfil" src="~/Content/Img/logo2.png">
             <p>Programación Web 3 - 1C</p>
             <p>© 2020 PW3, Todos los derechos reservados</p>
         </div>
