--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <!-- Definición del menú -->
-    <nav class="navbar navbar-expand-md  fixed-top position-fixed" id="colour">
+    <nav class=" shadow-lg navbar navbar-expand-md  fixed-top position-fixed" id="colour" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#miNavbar"
                 aria-controls="miNavbar" aria-expanded="false" aria-label="Mostrar u ocultar menú">
             <i class="fa fa-align-justify" aria-hidden="true"></i>
@@ -9,7 +9,7 @@
 
 
         <div class="collapse navbar-collapse" id="miNavbar">
-            <img class="border border-white" id="image-perfil" src="~/Content/Img/2.jpg">
+            <img class="border border-white" id="image-perfil" src="~/Content/Img/logo2.png">
 
 
             <div class="col-md-3 ml-4">
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-1" type="text" id="search" placeholder="Búsqueda" aria-label="Búsqueda">
-                    <button class="btn btn-outline-primary btn-rounded my-2 my-sm-0 text-light" type="submit">Buscar</button>
+                    <button class="btn btn-outline-primary btn-rounded my-2 my-sm-0 text-light" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                 </form>
             </div>
 
