--- a/WebCovid19/Views/Shared/VPCarrucel.cshtml
+++ b/WebCovid19/Views/Shared/VPCarrucel.cshtml
@@ -9,7 +9,7 @@
         <div class="carousel-item active">
             <img src="~/Content/img/8.jpg" alt="Obelisco - Buenos Aires" width="1100" height="500">
             <div class="carousel-caption">
-                <button class="btn btn-primary btn-rounded my-2 my-sm-0 text-light" type="submit">Registrarme</button>
+                <button class="btn btn-primary text-light btn-rounded my-2 my-sm-0 " type="submit">Registrarme</button>
                 <h3>Miles de personas están solicitando tu ayuda</h3>
                 <p>Necesidades humanas</p>
             </div>
