--- a/WebCovid19/Content/Css/main.css
+++ b/WebCovid19/Content/Css/main.css
@@ -3,9 +3,23 @@
 
 }
 
+#imgperfil {
+    height: 242px;
+    width: 259px;
+}
 
+#link{
+    text-decoration: none;
+    color: black;
+}
 
-
+#selectLarge {
+    font-size: 20px;
+    text-align: center;
+}
+#link:hover {
+        color: #3cebbb;
+    }
 .espace {
     margin-top: 100px;
     margin-bottom: 40px;
