--- a/WebCovid19/Views/Home/IndexLogueado.cshtml
+++ b/WebCovid19/Views/Home/IndexLogueado.cshtml
@@ -28,7 +28,8 @@
                                 <svg class="bi bi-exclamation-square-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm6 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
                                 </svg>
-                                Denunciar
+                               @* @Html.ActionLink("Denunciar", "Denuncia", "Home", new { @class = "nav-link hover text-light" }) *@
+                                <a href="~/Home/Denuncia/3" class="hover text-light" type="text">Denunciar</a>
                             </a>
                         </li>
                     </ul>
@@ -68,7 +69,11 @@
 
             <p class="card-text text-secondary"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span> 15/06/2020</p>
             <div class="text-center">
-                <a href="#" class="btn btn-primary">Mas detalles</a>
+                @* @Html.ActionLink("Mas detalles", "Login", "Home", new { @class = "btn btn-primary", Type="button", value="3" })
+                *@
+                <!--Nos puede servir para enviar el id de la necesidad que esta viendo asi pasa por el login y
+                    luego lo enviamos a los detalles de esa necesidad-->
+                <a href="~/Home/Login/3" class="btn btn-primary" type="button">Más detalles</a>
             </div>
         </div>
     </div>
