--- a/WebCovid19/Views/Home/Registro.cshtml
+++ b/WebCovid19/Views/Home/Registro.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.Usuarios
+﻿@model WebCovid19.Models.Views.VMRegistro
 
 @{
     ViewBag.Title = "Registro";
@@ -6,53 +6,59 @@
 }
 
 
+  <div class="limiter">
+        <div class="container-login100" style="background-image: url('~/Content/Img/5.jpg');">
+            <div class="wrap-login100 p-t-30 p-b-50">
+                <span class="login100-form-title p-b-41">
+                    Registro
+                </span><br>
+                @using (Html.BeginForm("Registro", "Home", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
+                {
 
-        <div class="limiter">
-            <div class="container-login100" style="background-image: url('~/Content/Img/5.jpg');">
-                <div class="wrap-login100 p-t-30 p-b-50">
-                    <span class="login100-form-title p-b-41">
-                        Registro
-                    </span><br>
 
-                    @using (Html.BeginForm("Registro", "Home", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
+                    @Html.AntiForgeryToken()
+
+                    if (ViewBag.mensajeError != null)
                     {
-                        @Html.AntiForgeryToken()
-
-
-                <div class="wrap-input100 validate-input">
-                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.Email) } })
-                    <span class="focus-input100" data-placeholder="&#xe82a;"></span>
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-
-                </div>
-
-                <div class="wrap-input100 validate-input">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.Password), Type = "password" } })
-                    <span class="focus-input100" data-placeholder="&#xe80f;"></span>
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" }) 
-                </div>
-
-                <div class="wrap-input100 validate-input">
-                    @Html.EditorFor(model => model.RepeatPassword, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.RepeatPassword), Type = "password" } })
-                    <span class="focus-input100" data-placeholder="&#xe80f;"></span>
-                    @Html.ValidationMessageFor(model => model.RepeatPassword, "", new { @class = "text-danger" })  
-                </div>
-                    
-                <div class="wrap-input100 validate-input" >
-                    @Html.EditorFor(model => model.FechaNacimiento,  new { htmlAttributes = new { @class = "input100", Type = "date", placeholder = Html.DisplayNameFor(x => x.FechaNacimiento) } })
-                    <span class="focus-input100" data-placeholder="&#xe82a;"></span>
-                    @Html.ValidationMessageFor(model => model.FechaNacimiento, "", new { @class = "text-danger" })
-                </div><br>
-                           
-                        
-                        <div class="container-login100-form-btn m-t-32">
-                                <button class="login100-form-btn">
-                                    Registrarse
-                                </button>
-                            </div><br>
+                        <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError</div>
                     }
+
+
+                    <div class="wrap-input100 validate-input">
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.Email) } })
+                        <span class="focus-input100" data-placeholder="&#xe82a;"></span>
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+
                     </div>
-                    
+
+                    <div class="wrap-input100 validate-input">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.Password), Type = "password" } })
+                        <span class="focus-input100" data-placeholder="&#xe80f;"></span>
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="wrap-input100 validate-input">
+                        @Html.EditorFor(model => model.RepeatPassword, new { htmlAttributes = new { @class = "input100", placeholder = Html.DisplayNameFor(x => x.RepeatPassword), Type = "password" } })
+                        <span class="focus-input100" data-placeholder="&#xe80f;"></span>
+                        @Html.ValidationMessageFor(model => model.RepeatPassword, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="wrap-input100 validate-input">
+                        @Html.EditorFor(model => model.FechaNacimiento, new { htmlAttributes = new { @class = "input100", Type = "date", placeholder = Html.DisplayNameFor(x => x.FechaNacimiento) } })
+                        <span class="focus-input100" data-placeholder="&#xe82a;"></span>
+                        @Html.ValidationMessageFor(model => model.FechaNacimiento, "", new { @class = "text-danger" })
+                    </div><br>
+
+
+                    <div class="container-login100-form-btn m-t-32">
+                        <button class="login100-form-btn">
+                            Registrarse
+                        </button>
+                    </div><br>
+                    <div class="container-login100-form-btn m-t-32">
+                        Ya tengo una cuenta  &nbsp;  @Html.ActionLink(" Log in", "Login", "Home", new { @class = " text-primary" })
+                    </div>
+                }
             </div>
         </div>
-    
+       </div>
