Vista Detalles de necesidad hecha - Organizo el proyecto

--- a/WebCovid19/Views/Denuncia/Denuncia.cshtml
+++ b/WebCovid19/Views/Denuncia/Denuncia.cshtml
@@ -1,11 +1,11 @@
 ﻿@model WebCovid19.Denuncias
 @{
     ViewBag.Title = "Denuncia";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
  
-        <div class="card mb-3 mt-5">
+        <div class="card mb-3 mt-5" id="margin-top-header">
             <div class="card-body  mt-5">
                 <h5 class="card-title text-center">Denunciar publicación</h5>
                 <h6 class="card-subtitle mb-2 text-muted text-center">Realizar denuncia ante la publicación de: Titulo_obtenido @* --->  @ViewBag.titulo*@</h6>
