--- a/WebCovid19/Views/Home/IndexLogueado.cshtml
+++ b/WebCovid19/Views/Home/IndexLogueado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "IndexLogueado";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
 
@@ -28,8 +28,7 @@
                                 <svg class="bi bi-exclamation-square-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm6 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
                                 </svg>
-                               @* @Html.ActionLink("Denunciar", "Denuncia", "Home", new { @class = "nav-link hover text-light" }) *@
-                                <a href="~/Home/Denuncia/3" class="hover text-light" type="text">Denunciar</a>
+                                @Html.ActionLink("Denunciar", "Denuncia", "Denuncia", null, new { @class = "hover text-light" })
                             </a>
                         </li>
                     </ul>
@@ -38,9 +37,9 @@
 
             <div class="row">
                 <img class="rounded-circle float-left mt-2 border border-white" id="image-perfil" src="~/Content/Img/negritten.jpg">
-                    <div class="col-md-2">
-                        <p class=" text-secondary mt-3"><b>Turco Mohamed</b></p>
-                        <p><span class="fa fa-calendar"></span> 08/05/2020</p>
+                <div class="col-md-2">
+                    <p class=" text-secondary mt-3"><b>Turco Mohamed</b></p>
+                    <p><span class="fa fa-calendar"></span> 08/05/2020</p>
                 </div>
             </div>
 
@@ -72,10 +71,11 @@
                 @* @Html.ActionLink("Mas detalles", "Login", "Home", new { @class = "btn btn-primary", Type="button", value="3" })
                 *@
                 <!--Nos puede servir para enviar el id de la necesidad que esta viendo asi pasa por el login y
-                    luego lo enviamos a los detalles de esa necesidad-->
-                <a href="~/Home/Login/3" class="btn btn-primary" type="button">Más detalles</a>
+    luego lo enviamos a los detalles de esa necesidad
+            <a href="~/Home/Login/3" class="btn btn-primary" type="button">Más detalles</a>-->
+                @Html.ActionLink("Más detalles", "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-primary" })
             </div>
         </div>
     </div>
-    </div>
-    <!--FIN DE LA PUBLICACION-->
+</div>
+<!--FIN DE LA PUBLICACION-->
