--- a/WebCovid19/Content/Css/main.css
+++ b/WebCovid19/Content/Css/main.css
@@ -1,6 +1,10 @@
 ﻿#colour {
     background-color: white;
+}
 
+#margin-top-header{
+margin-top: 86px;
+border-style:none;
 }
 
 #imgperfil {
@@ -30,12 +34,30 @@
     font-size: 26px;
 }
 
+
+#imagen-detalle {
+    height: 382px;
+    width: 458px;
+    border-radius: 33px;
+    margin-left: 16px;
+}
+
+#icons {
+    height: 40px;
+    width: 40px;
+}
+
+#card-circle {
+    -webkit-box-shadow: -1px -2px 19px -2px rgba(232,220,232,1);
+    -moz-box-shadow: -1px -2px 19px -2px rgba(232,220,232,1);
+    box-shadow: -1px -2px 19px -2px rgba(232,220,232,1);
+    border-radius: 48px;
+}
+
 #card {
-    border-color: black;
-    border-radius: 12px;
-    -webkit-box-shadow: 1px 1px 8px 1px rgba(156,156,156,0.82);
-    -moz-box-shadow: 1px 1px 8px 1px rgba(156,156,156,0.82);
-    box-shadow: 1px 1px 8px 1px rgba(156,156,156,0.82);
+    -webkit-box-shadow: -1px -2px 19px -2px rgba(232,220,232,1);
+    -moz-box-shadow: -1px -2px 19px -2px rgba(232,220,232,1);
+    box-shadow: -1px -2px 19px -2px rgba(232,220,232,1);
 }
 
 #search {
