--- a/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
@@ -14,7 +14,7 @@
         <h5 class="card-title text-center">Realizar Donación Monetaria</h5><br>
 
 
-        @using (Html.BeginForm("DonacionMonetaria", "Home", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
+        @using (Html.BeginForm("DonacionMonetaria", "DonacionMonetaria", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
         {
 
             @Html.AntiForgeryToken()
@@ -33,7 +33,7 @@
 
             <div class="col-md-12 btn-group mt-4">
 
-                <button type="button" class="btn btn-danger"><a href="~/Home/IndexLogueado">Cancelar</a></button>
+                <a type="button" class="btn btn-danger" href="~/Home/IndexLogueado">Cancelar</a>
                 <button type="submit" class="btn btn-primary ml-2">Enviar</button>
             </div>
         }
