--- a/WebCovid19/Views/Home/Index.cshtml
+++ b/WebCovid19/Views/Home/Index.cshtml
@@ -1,14 +1,13 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 
 }
 
 <!--Carrucel-->
 @Html.Partial("VPCarrucel")
 <!--Fin carrusel-->
-
 <!--Necesidades-->
 
 <div id="about" class=" area-padding my-sm-4">
