--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="container mb-5">
     <!-- Definición del menú -->
-    <nav class=" shadow-lg navbar navbar-expand-md  fixed-top position-fixed" id="colour" >
+    <nav class=" shadow-lg navbar navbar-expand-md  fixed-top position-fixed mb-5" id="colour" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#miNavbar"
                 aria-controls="miNavbar" aria-expanded="false" aria-label="Mostrar u ocultar menú">
             <i class="fa fa-align-justify" aria-hidden="true"></i>
@@ -31,15 +31,18 @@
                 <ul class="navbar-nav ">
                     <li class="nav-item active my-sm-2">
                         <!-- <a class="nav-link hover text-light" href="#">Inicio</a-->
-                        @Html.ActionLink("Inicio", "Index", "Home", new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "nav-link hover text-light" })
+
                     </li>
                     <li class="nav-item active my-sm-2">
                         <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
-                        @Html.ActionLink("Crear Necesidad", "NecesidadAlta", "Necesidad", new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Crear Necesidad", "NecesidadAlta", "Necesidad", null, new { @class = "nav-link hover text-light" })
+
                     </li>
                     <li class="nav-item active my-sm-2">
                         <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-                        @Html.ActionLink("Acerca de", "Index", "Home", new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Acerca de", "Index", "Home", null, new { @class = "nav-link hover text-light" })
+
                     </li>
 
 
@@ -55,8 +58,9 @@
                                     <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
                                     </svg>
-                                   
-                                    @Html.ActionLink(" Log in", "Login", "Home", new { @class="hover", id="link"})
+
+                                    @Html.ActionLink("Log in", "Login", "Home", null, new { @class = "hover", id = "link" })
+
                                 </a>
                             </li>
                             <li>
@@ -64,7 +68,7 @@
                                     <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
                                     </svg>
-                                    @Html.ActionLink("Registrarme", "Registro", "Home", new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Registrarme", "Registro", "Home", null, new { @class = "hover", id = "link" })
                                 </a>
                             </li>
                             <li>
@@ -72,7 +76,7 @@
                                     <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
                                     </svg>
-                                    @Html.ActionLink("Mi Perfil", "Perfil", "Home", new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Mi Perfil", "Perfil", "Home",null, new { @class = "hover", id = "link" })
                                 </a>
                             </li>
                             <li>
@@ -80,14 +84,15 @@
                                     <svg class="bi bi-exclamation-octagon-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M11.46.146A.5.5 0 0011.107 0H4.893a.5.5 0 00-.353.146L.146 4.54A.5.5 0 000 4.893v6.214a.5.5 0 00.146.353l4.394 4.394a.5.5 0 00.353.146h6.214a.5.5 0 00.353-.146l4.394-4.394a.5.5 0 00.146-.353V4.893a.5.5 0 00-.146-.353L11.46.146zM8 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
                                     </svg>
-                                    @Html.ActionLink("Denuncias (Admin)", "Denuncias", "Home", new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Denuncias (Admin)", "Denuncia", "Denuncia", null, new { @class = "hover", id = "link" })
+
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="" class="text-light">
                                     <i class="fa fa-sign-out" aria-hidden="true"></i>
-                                    @Html.ActionLink("Salir", "Salir", "Home", new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Salir", "Salir", "Home", null, new { @class = "hover", id = "link" })
                                 </a>
                             </li>
 
