Agrego vista del Admin y vista que determina errores

--- a/WebCovid19/Content/Css/main.css
+++ b/WebCovid19/Content/Css/main.css
@@ -12,6 +12,11 @@ border-style:none;
     width: 259px;
 }
 
+#imgperfil-denuncia {
+    height: 352px;
+    width: 267px;
+}
+
 #link{
     text-decoration: none;
     color: black;
