--- a/WebCovid19/Views/Home/Login.cshtml
+++ b/WebCovid19/Views/Home/Login.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div class="limiter">
+<div class="limiter" id="margin-top-header">
     <div class="container-login100">
         <div class="wrap-login100 p-t-30 p-b-50">
             <span class="login100-form-title p-b-41">
@@ -43,7 +43,7 @@
                     </button>
                 </div><br>
                 <div class="container-login100-form-btn m-t-32">
-                    Aun no estoy registrado  &nbsp;  @Html.ActionLink("Registrarme", "Registro", "Home", new { @class = " text-primary" })
+                    Aun no estoy registrado  &nbsp;  @Html.ActionLink("Registrarme", "Registro", "Home",null, new { @class = " text-primary" })
                 </div>
             }
         </div>
