--- a/WebCovid19/Views/Home/Registro.cshtml
+++ b/WebCovid19/Views/Home/Registro.cshtml
@@ -56,7 +56,7 @@
                     </button>
                 </div><br>
                 <div class="container-login100-form-btn m-t-32">
-                    Ya tengo una cuenta  &nbsp;  @Html.ActionLink(" Log in", "Login", "Home", new { @class = " text-primary" })
+                    Ya tengo una cuenta  &nbsp;  @Html.ActionLink(" Log in", "Login", "Home",null, new { @class = " text-primary" })
                 </div>
             }
         </div>
