Modificadas cositas de vistas y nombre de NecesidadesController

--- a/WebCovid19/Views/Shared/_BaseLayout.cshtml
+++ b/WebCovid19/Views/Shared/_BaseLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>Index</title>
+    <title>@ViewBag.Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
