Corrijo layouts - Separo el proyecto de las entidades y de los servicios

--- a/WebCovid19/Views/Shared/_BaseLayout.cshtml
+++ b/WebCovid19/Views/Shared/_BaseLayout.cshtml
@@ -20,4 +20,21 @@
     @System.Web.Optimization.Scripts.Render("~/bundles/Scripts/umdJS")
 </head>
 
-@RenderBody()
+<body>
+
+    <div class="container">
+        <!-- Definición del menú -->
+        @Html.Partial("VPHeader")
+        <!-- Termina la definición del menú -->
+
+
+
+        @RenderBody()
+
+
+
+    </div>
+</body>
+@Html.Partial("VPFooter")
+
+</html>
