--- a/WebCovid19/Views/Necesidades/Create.cshtml
+++ b/WebCovid19/Views/Necesidades/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Crear necesidad</h2>
 
 @using (Html.BeginForm()) 
 {
