Agrego logica en Login y Registro - Vista para recibir activacion Creada - Enviar email falta terminar

--- a/WebCovid19/Views/Home/Login.cshtml
+++ b/WebCovid19/Views/Home/Login.cshtml
@@ -2,6 +2,8 @@
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
+    string mensajeAdvertencia = (string)ViewData["mensajeAdvertencia"];
+    string mensajeError = (string)ViewData["mensajeError"];
 }
 
 
@@ -18,9 +20,13 @@
             {
                 @Html.AntiForgeryToken()
 
-                if (ViewBag.mensajeError != null)
+                if (mensajeError != null)
                 {
-                    <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError</div>
+                    <div class="p-3 mb-2 bg-danger text-white">@mensajeError</div>
+                }
+                if (mensajeAdvertencia != null)
+                {
+                    <div class="p-3 mb-2 bg-warning text-white">@mensajeAdvertencia</div>
                 }
 
 
@@ -42,9 +48,10 @@
                         Login
                     </button>
                 </div><br>
-                <div class="container-login100-form-btn m-t-32">
-                    Aun no estoy registrado  &nbsp;  @Html.ActionLink("Registrarme", "Registro", "Home",null, new { @class = " text-primary" })
-                </div>
+                      <div class="text-center container-login100-form-btn m-t-32">
+                          Aun no estoy registrado  &nbsp;  @Html.ActionLink("Registrarme", "Registro", "Home", null, new { @class = " text-primary" })
+                          Aun no active mi cuenta   &nbsp; @Html.ActionLink("Activar cuenta", "CodigoDeVerificacion", "Home", null, new { @class = " text-primary" })
+                      </div>
             }
         </div>
 
