--- a/WebCovid19/Views/Home/Index.cshtml
+++ b/WebCovid19/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                 </p>
                 <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05</p>
                 <div class="text-center">
-                    <a href="#" class="btn btn-primary">Mas detalles</a>
+                   <a href="@Url.Action("Detalles","Necesidades")" class="btn btn-primary">Mas detalles</a>
                 </div>
             </div>
         </div>
