Actualizacion del proyecto
Agregado DAO y comentarios en base a la revision del profe

--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -36,7 +36,7 @@
                     </li>
                     <li class="nav-item active my-sm-2">
                         <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
-                        @Html.ActionLink("Crear Necesidad", "Necesidades", "Crear", null, new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Crear Necesidad", "Crear", "Necesidades", null, new { @class = "nav-link hover text-light" })
 
                     </li>
                     <li class="nav-item active my-sm-2">
