Cambio gigante. Leer descr.
Modifique los namespaces para que coincidan con la nueva estructura del proyecto. Saque varios comentarios y avancé con la creación de necesidades. Ya crea la necesidad y la persiste en la bd. Agregué Utilities, el cual se utiliza para el upload de imagenes.

--- a/WebCovid19/Views/Home/Login.cshtml
+++ b/WebCovid19/Views/Home/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.Models.Views.VMLogin
+﻿@model Entidades.Views.VMLogin
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
