--- a/WebCovid19/Views/Necesidades/Insumos.cshtml
+++ b/WebCovid19/Views/Necesidades/Insumos.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.NecesidadesDonacionesInsumos
+﻿@model Entidades.NecesidadesDonacionesInsumos
 
 @{
     ViewBag.Title = "Insumos";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>NecesidadesDonacionesInsumos</h4>
+    <h4>Agregar Insumos</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
