--- a/WebCovid19/Views/Usuario/Registro.cshtml
+++ b/WebCovid19/Views/Usuario/Registro.cshtml
@@ -15,7 +15,7 @@
             <span class="login100-form-title p-b-41">
                 Registro
             </span><br>
-            @using (Html.BeginForm("Registro", "Home", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
+            @using (Html.BeginForm("Registro", "Usuario", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
             {
 
 
