--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -31,7 +31,7 @@
                 <ul class="navbar-nav ">
                     <li class="nav-item active my-sm-2">
                         <!-- <a class="nav-link hover text-light" href="#">Inicio</a-->
-                        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Inicio", "Index", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
                     <li class="nav-item active my-sm-2">
@@ -41,7 +41,7 @@
                     </li>
                     <li class="nav-item active my-sm-2">
                         <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-                        @Html.ActionLink("Acerca de", "Index", "Home", null, new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Acerca de", "Index", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
 
@@ -59,7 +59,7 @@
                                         <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
                                     </svg>
 
-                                    @Html.ActionLink("Log in", "Login", "Home", null, new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Log in", "Login", "Usuario", null, new { @class = "hover", id = "link" })
 
                                 </a>
                             </li>
@@ -68,7 +68,7 @@
                                     <svg class="bi bi-person-lines-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm7 1.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm-2-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm0-3a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5zm2 9a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5z" clip-rule="evenodd" />
                                     </svg>
-                                    @Html.ActionLink("Registrarme", "Registro", "Home", null, new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Registrarme", "Registro", "Usuario", null, new { @class = "hover", id = "link" })
                                 </a>
                             </li>
                             <li>
@@ -84,7 +84,7 @@
                                     <svg class="bi bi-exclamation-octagon-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" d="M11.46.146A.5.5 0 0011.107 0H4.893a.5.5 0 00-.353.146L.146 4.54A.5.5 0 000 4.893v6.214a.5.5 0 00.146.353l4.394 4.394a.5.5 0 00.353.146h6.214a.5.5 0 00.353-.146l4.394-4.394a.5.5 0 00.146-.353V4.893a.5.5 0 00-.146-.353L11.46.146zM8 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
                                     </svg>
-                                    @Html.ActionLink("Denuncias (Admin)", "Administrador", "Home", null, new { @class = "hover", id = "link" })
+                                    @Html.ActionLink("Denuncias (Admin)", "Administrador", "Usuario", null, new { @class = "hover", id = "link" })
 
                                 </a>
                             </li>
