Login Registro Mi Perfil Ok

--- a/WebCovid19/Content/Css/main.css
+++ b/WebCovid19/Content/Css/main.css
@@ -7,6 +7,10 @@ margin-top: 86px;
 border-style:none;
 }
 
+#font-Registro-info{
+    font-size:20px;
+}
+
 #imgperfil {
     height: 242px;
     width: 259px;
