arreglo @model de mis vistas

--- a/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.Models.Views.VMDonacionMonetaria
+﻿@model Entidades.Views.VMDonacionMonetaria
 
 @{
     ViewBag.Title = "DonacionMonetaria";
