--- a/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.DonacionesMonetarias
+﻿@model Entidades.DonacionesMonetarias
 
 @{
     ViewBag.Title = "SeleccionComprobanteDePago";
