--- a/WebCovid19/Views/Usuario/Administrador.cshtml
+++ b/WebCovid19/Views/Usuario/Administrador.cshtml
@@ -4,7 +4,10 @@
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
-<div class="col-md-12" id="margin-top-header">
+    <div class="text-center mt.5" id="margin-top-header">
+            <h1>Gestion de Denuncias</h1>
+    </div>
+<div class="col-md-12">
     <div class="col-md-4 mt-4 mb-3 float-left">
 
         <div class="card" id="card">
