--- a/WebCovid19/Views/Necesidades/Crear.cshtml
+++ b/WebCovid19/Views/Necesidades/Crear.cshtml
@@ -57,22 +57,23 @@
             </select>
         </div>
     </div>
+    @Html.ValidationMessageFor(model => model.TipoDonacion, "", new { @class = "text-danger" })
 
     <div class="form-group">
         <label for="Foto">Imagen: </label>
         <div class="col-md-10">
-            @Html.TextBoxFor(model => model.Foto, new { type = "file", accept ="image/jpg, image/jpeg, image/png", @class = "form-control-file" })
+            @Html.TextBoxFor(model => model.Foto, new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" })
             @Html.ValidationMessageFor(model => model.Foto, "", new { @class = "text-danger" })
         </div>
     </div>
     @{ #endregion }
-        <div class="btn-group">
-            <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
-            <div class="col-2"></div>
-            <input type="reset" value="Reiniciar" class="btn btn-primary" />
-            <div class="col-2"></div>
-            @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
-        </div>
+    <div class="btn-group">
+        <input type="submit" value="Siguiente" class="offset-md-6 btn btn-primary" />
+        <div class="col-2"></div>
+        <input type="reset" value="Reiniciar" class="btn btn-primary" />
+        <div class="col-2"></div>
+        @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
+    </div>
 
 </div>
 }
