--- a/WebCovid19/Content/Css/main.css
+++ b/WebCovid19/Content/Css/main.css
@@ -11,6 +11,12 @@ border-style:none;
     font-size:20px;
 }
 
+#colour-card {
+    background-color: #3cebbb;
+    color: white;
+    font-size:26px;
+}
+
 #imgperfil {
     height: 242px;
     width: 259px;
