--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -47,16 +47,15 @@
 
                     </li>
                     <li class="nav-item active my-sm-2">
+                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
+                        @Html.ActionLink("Home", "IndexLogueado", "Usuario", null, new { @class = "nav-link hover text-light" })
+
+                    </li>
+                    <li class="nav-item active my-sm-2">
                         <!--  <a class="nav-link hover text-light" href="#">Crear Necesidad</a>-->
                         @Html.ActionLink("Crear Necesidad", "Crear", "Necesidades", null, new { @class = "nav-link hover text-light" })
 
                     </li>
-                    <li class="nav-item active my-sm-2">
-                        <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-                        @Html.ActionLink("Acerca de", "Index", "Usuario", null, new { @class = "nav-link hover text-light" })
-
-                    </li>
-
 
                     <div class="btn-group">
                         <button class="btn btn-outline-primary btn-rounded my-4 my-sm-2 dropdown-toggle"
@@ -103,12 +102,12 @@
                             <li class="divider"></li>
                             @if (Session["Email"] as string != "")
                             {
-                            <li>
-                                <a href="" class="text-light">
-                                    <i class="fa fa-sign-out" aria-hidden="true"></i>
-                                    @Html.ActionLink("Salir", "Salir", "Usuario", null, new { @class = "hover", id = "link" })
-                                </a>
-                            </li>
+                                <li>
+                                    <a href="" class="text-light">
+                                        <i class="fa fa-sign-out" aria-hidden="true"></i>
+                                        @Html.ActionLink("Salir", "Salir", "Usuario", null, new { @class = "hover", id = "link" })
+                                    </a>
+                                </li>
                             }
 
                         </ul>
