--- a/WebCovid19/Views/Necesidades/MisNecesidades.cshtml
+++ b/WebCovid19/Views/Necesidades/MisNecesidades.cshtml
@@ -5,5 +5,11 @@
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
-@Html.Partial("~/Views/Usuario/PublicacionDeLaNecesidad.cshtml", Model)
- 
+@if (Model == null)
+{
+    <h1> No hay necesidades cargadas </h1>
+}
+else
+{
+    @Html.Partial("~/Views/Usuario/PublicacionDeLaNecesidad.cshtml", Model)
+}
