--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -1,11 +1,13 @@
 ﻿@model List<Entidades.Necesidades>
 
-@if(Model == null)
+@if(Model.Count == 0)
 {
-    <h1 id="margin-top-header"> No hay necesidades cargadas</h1>
+    <h1 id="margin-top-header" class="text-center"> No hay necesidades cargadas</h1>
 }
+else
+{
 
-@foreach (var necesidad in Model)
+foreach (var necesidad in Model)
 {
     <div class="container" id="margin-top-header">
         <div class="card" id="card">
@@ -27,7 +29,14 @@
                 </div>
 
                 <div class="row">
-                    <img class="rounded-circle float-left mt-2 border border-white" id="image-perfil" src="~/Content/Img/@necesidad.Usuarios.Foto">
+                    @if (@necesidad.Usuarios.Foto == null)
+                    {
+                        <img class="rounded-circle float-left mt-2 border border-white" id="image-perfil" src="~/Content/Img/imagenPerfil-Nula.png">
+                    }
+                    else
+                    {
+                        <img class="rounded-circle float-left mt-2 border border-white" id="image-perfil" src="~/Content/Img/@necesidad.Usuarios.Foto">
+                    }
                     <div class="col-md-2">
                         <p class=" text-secondary mt-3"><b>@necesidad.Usuarios.UserName</b></p>
                         <p><span class="fa fa-calendar"></span> @necesidad.Usuarios.FechaCracion</p>
@@ -35,6 +44,7 @@
                 </div>
 
             </div>
+           
             <img class="card-img-top" src="~/Content/Img/@necesidad.Foto" id="imagen-necesidad" alt="Card image cap">
             <div class="card-body">
                 <div class="float-auto">
@@ -86,3 +96,5 @@
 
 }
 
+
+}
