ActionFilter para validar peticion
En caso de que se haya accedido a la página de ingresar a través de
otra página automáticamente, luego de hacer click en “Ingresar”, se deberá redirigir a la
página donde se deseaba ingresar, caso contrario se redirigirá a la página de inicio.

--- a/WebCovid19/Views/Usuario/Login.cshtml
+++ b/WebCovid19/Views/Usuario/Login.cshtml
@@ -2,7 +2,15 @@
 @{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_AnonimoLayout.cshtml";
-    string mensajeAdvertencia = (string)ViewData["mensajeAdvertencia"];
+    string mensajeAdvertencia;
+    if (Request["mensaje"]!=null)
+    {
+        mensajeAdvertencia = Request["mensaje"];
+    }
+    else {
+        mensajeAdvertencia = (string)ViewData["mensajeAdvertencia"];
+    }
+
     string mensajeError = (string)ViewData["mensajeError"];
     string mensajeCorrecto = (string)ViewData["mensajeCorrecto"];
 }
