Agrego Seccion acerca-de, con ActionName

--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -53,10 +53,9 @@
                     </li>
                     <li class="nav-item active my-sm-2">
                         <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-                        @Html.ActionLink("Acerca de", "Index", "Usuario", null, new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Acerca de", "acerca-de", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
-
 
                     <div class="btn-group">
                         <button class="btn btn-outline-primary btn-rounded my-4 my-sm-2 dropdown-toggle"
